--- a/web/src/App.css
+++ b/web/src/App.css
@@ -76,3 +76,49 @@ section .content-list {
 .action-icon:hover {
   color: #2B9B3A;
 }
+
+.input-field {
+  width: 100%;
+  margin: 0 0 10px 0;
+}
+
+.input-field label {
+  width: 100%;
+  margin: 0 0 4px 0;
+  display: block;
+  color: #343434;
+}
+
+.input-field input {
+  width: 100%;
+  height: 42px;
+  border: 1px solid #CCCCCC;
+  border-radius: 4px;
+  padding: 6px;
+}
+
+.button {
+  width: 100%;
+  height: 42px;
+  border-radius: 4px;
+}
+
+.button-confirm {
+  color: #FFF;
+  background: #3FDB54;
+  border: 1px solid #2FE413;
+}
+
+.form-login {
+  width: calc(100% - 20px);
+  max-width: 400px;
+  padding: 20px;
+  margin: 10px auto;
+  border-radius: 10px;
+  box-shadow: 0 3px 6px 6px rgba(0, 0, 0, 0.16);
+}
+
+.form-login h1 {
+  margin: 0 0 20px 0;
+  font-weight: 300;
+}
