Frontend in progress...

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -9,6 +9,10 @@ html, body {
   height: 100%;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
