--- a/web/src/App.css
+++ b/web/src/App.css
@@ -9,17 +9,14 @@ header nav {
   padding: 0 20px;
   display: flex;
   align-items: center;
-  justify-content: right;
-}
-
-header nav div {
-  padding: 10px;
+  justify-content: flex-end;
 }
 
 header .menu-item {
   font-weight: 700;
   color: #FFF;
   text-decoration: none;
+  padding: 10px;
 }
 
 header .menu-item:hover {
@@ -38,7 +35,8 @@ section h1 {
   border-bottom: 4px solid #707070;
 }
 
-section .content-list {
+section .content-list,
+section .form-content {
   width: 100%;
   margin: 20px 0 0 0;
 }
@@ -89,7 +87,8 @@ section .content-list {
   color: #343434;
 }
 
-.input-field input {
+.input-field input,
+.input-field select {
   width: 100%;
   height: 42px;
   border: 1px solid #CCCCCC;
@@ -113,7 +112,7 @@ section .content-list {
   width: calc(100% - 20px);
   max-width: 400px;
   padding: 20px;
-  margin: 10px auto;
+  margin: 20px auto;
   border-radius: 10px;
   box-shadow: 0 3px 6px 6px rgba(0, 0, 0, 0.16);
 }
